# Autonomous-Enterprise-AI-Operations-Platform

./: .env.example  .gitignore  Dockerfile.dev  ENTERPRISE_AI_PLATFORM_REPORT.md  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
agents/healing_agent/: graph.py  state.py
agents/healing_agent/executors/: ansible_executor.py  executor_factory.py  notification_executor.py  rest_executor.py  ssh_executor.py
agents/noc_agent/: graph.py
backend/: alembic.ini
backend/core/: config.py  database.py  exceptions.py  kafka_client.py  redis_client.py  security.py  vault_client.py
backend/services/ai_service/: main.py
backend/services/auth_service/: deps.py  main.py
backend/services/healing_service/: main.py
backend/services/noc_service/: main.py
backend/services/rag_service/: main.py
backend/services/soc_service/: main.py
backend/shared/middleware/: audit_middleware.py  tenant_middleware.py
backend/shared/models/: alert.py  base.py  (+5 more)
demo/: ai_client.py  app.py  config_generator.py  config_intelligence.py  host_inspector.py  host_monitor.py  network_scanner.py  vector_store.py
demo/static/: index.html
docs/: 02_folder_structure.md  03_database_schema.md  04_api_design.md  05_agent_architecture.md  06_ai_model_selection.md  07_noc_soc_design.md  08_hardware_requirements.md  09_security_design.md  10_deployment_architecture.md  11_roadmap_cost_risk.md  12_rag_physec_healing_detail.md
monitoring/prometheus/: prometheus.yml
scripts/setup/: init_db.sql  seed_database.py
tests/: test_demo_api.py  test_link_down_realtime.py
(+51 files in other folders)
